// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OutlineButton renders as expected if full width 1`] = `
<button
  className="lab-btn lab-btn--outline lab-btn--normal lab-btn--teal lab-btn--block"
  onClick={[Function]}
  type="button"
>
  Test Outline fullWidth Button
</button>
`;

exports[`OutlineButton renders as expected when passing a large size 1`] = `
<button
  className="lab-btn lab-btn--outline lab-btn--large lab-btn--teal"
  onClick={[Function]}
  type="button"
>
  Test Outline Large Button
</button>
`;

exports[`OutlineButton renders as expected when passing a light skin 1`] = `
<button
  className="lab-btn lab-btn--outline lab-btn--normal lab-btn--light"
  onClick={[Function]}
  type="button"
>
  Test Outline Light Button
</button>
`;

exports[`OutlineButton renders as expected when passing disabled as true 1`] = `
<button
  className="lab-btn lab-btn--outline lab-btn--normal lab-btn--teal"
  disabled={true}
  onClick={[Function]}
  type="button"
>
  Test Outline Disabled Button 1
</button>
`;

exports[`OutlineButton renders as expected when passing the Search icon 1`] = `
<button
  className="lab-btn lab-btn--outline lab-btn--normal lab-btn--teal"
  onClick={[Function]}
  type="button"
>
  Test Outline magnifying-glass Button
</button>
`;

exports[`OutlineButton renders as expected when tabIndex is passed 1`] = `
<button
  className="lab-btn lab-btn--outline lab-btn--normal lab-btn--teal"
  onClick={[Function]}
  tabIndex={1}
  type="button"
>
  Test tabIndex
</button>
`;

exports[`OutlineButton renders with base props 1`] = `
<button
  className="lab-btn lab-btn--outline lab-btn--normal lab-btn--teal"
  onClick={[Function]}
  type="button"
>
  Test Outline Button
</button>
`;
